--- a/manuscript/extended_discussion.Rnw
+++ b/manuscript/extended_discussion.Rnw
@@ -96,7 +96,7 @@
 
 <<load.libraries,echo=FALSE,results="hide",warning=FALSE,message=FALSE,error=FALSE,cache=FALSE>>=
 opts_chunk$set(dev="cairo_pdf",out.width="\\columnwidth",out.height="0.7\\textheight",out.extra="keepaspectratio")
-opts_chunk$set(cache=TRUE, autodep=TRUE)
+opts_chunk$set(cache=TRUE, autodep=TRUE,cache.path="extended_discussion_cache/")
 options(device = function(file, width = 8, height = 7, ...) {
   cairo_pdf(tempfile(), width = width, height = height, ...)
 })
@@ -386,37 +386,6 @@ genes such as hormones and galectins, identify novel lineage-specific
 expression patterns, and quantify \human specific differences in gene
 expression that may be related to obstetrical disorders such as
 pre-eclampsia.
-
-\begin{table}
-  \small
-  \begin{tabular}{>{\raggedright }p{0.7in}
-                  >{\raggedright }p{0.7in}
-                  c c 
-                  p{0.65in}}
-    \toprule
-    {\centering Species  }                     & {\centering Common Name }& 
-       \multicolumn{1}{p{0.43in}}{\raggedright \centering Gestation (days)} & 
-       \multicolumn{1}{p{0.3in}}{\raggedright \centering Litter Size}  & Source \\
-    \midrule
-    \textit{Ateles fusciceps}     & Spider monkey & 224 & 1 & \citet{Ernest2003:lifehistorycharacteristicsofplacental}\\
-    \textit{Bos taurus}           & Cow & 278 & 1 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \textit{Canis familiaris}     & Dog & 61 & 4 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \textit{Dasypus novemcinctus} & Nine-banded Armadillo & 150 & 4 & \citet{Smith1984:amazingarmadillo} \\
-    \textit{Equus caballus}       & Horse & 336 & 1 & \citet{Kiltie1982:intraspecificvariationmammaliangestation}\\
-    \textit{Loxodonta africana}   & African savanna elephant & 644 & 1 & \citet{Ernest2003:lifehistorycharacteristicsofplacental}\\
-    \textit{Homo sapiens}         & Human & 270 & 1.1 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \textit{Monodelphis domestica}& Gray short-tailed opossum & 15 & 7.1 & \citet{Harder.ea1993:Gestationandplacentationin} \\
-    \textit{Mus musculus}         & Mouse & 20 & 6.1 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \textit{Spalax galili}   & Blind mole rat from Upper Galilee & 28-42 & 4 & \citet{Nevo1997:mosiacevolutionofsubterranianmammals} \\
-    \textit{Ovis aries}           & Domestic sheep & 151 & 1.35 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \textit{Pan paniscus}         & Bonobo & 223 & 1 & \citet{Ernest2003:lifehistorycharacteristicsofplacental} \\
-    \textit{Spalax carmeli}       & Blind mole rat from northern Israel & 28-42 & 4 & \citet{Nevo1997:mosiacevolutionofsubterranianmammals}\\
-    \textit{Sus scrofa}           & Domestic pig (Duroc) & 114 & 5.8 & \citet{Kiltie1982:intraspecificvariationmammaliangestation} \\
-    \bottomrule
-  \end{tabular}
-  \caption{Gestational periods in days and average liter sizes for studied species.}
-  \label{tab:gestational_periods}
-\end{table}
 
 \section{Methods}
 
