switch to acro from acronym

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -1,26 +1,26 @@
-\acrodef{EV}[EV]{Extracellular Vesicle}
-\acrodef{SVM}{Support Vector Machine}
-\acrodef{ROC}{Receiver Operating Characteristic}
-\acrodef{KNN}{K Nearest Neighbors}
-\acrodef{SRA}{Sequence Read Archive}
-\acrodef{PRG2}[\textit{PRG2}]{Proteoglycan 2, bone marrow}
-\acrodef{FPKM}{Fragments Per Kilobase of exon per Million reads}
-\acrodef{CSH1}[\textit{CSH1}]{chorionic somatomammotropin hormone 1}
-\acrodef{CSH2}[\textit{CSH2}]{chorionic somatomammotropin hormone 2}
-\acrodef{CSHL1}[\textit{CSHL1}]{chorionic somatomammotropin hormone-like 1}
-\acrodef{GH2}[\textit{GH2}]{growth hormone 2}
-\acrodef{CEA}{carcinoembryonic antigen}
-\acrodef{HSD3B1}[\textit{HSD3B1}]{3-β Hydroxysteroid dehydrogenase 1}
-\acrodef{GSE}{Gene Set Enrichment}
-\acrodef{OU}{Ornstein-Uhlenbeck}
-\acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
-\acrodef{TSI}{Tissue Specificity Index}
-\acrodef{SRA}{Sequence Read Archive}
-\acrodef{GH}{Growth Hormone}
-\acrodef{PSG}{Pregnancy-Specific Glycoprotein}
-\acrodef{PAG}{Pregnancy-Associated Glycoprotein}
-\acrodef{GO}{Gene Ontology}
-\acrodef{FDR}{False Discovery Rate}
+\DeclareAcronym{EV}{short=EV,long=Extracellular Vesicle}
+\DeclareAcronym{SVM}{long=Support Vector Machine}
+\DeclareAcronym{ROC}{long=Receiver Operating Characteristic}
+\DeclareAcronym{KNN}{long=K Nearest Neighbors}
+\DeclareAcronym{SRA}{long=Sequence Read Archive}
+\DeclareAcronym{PRG2}{short=\textit{PRG2},long=Proteoglycan 2, bone marrow}
+\DeclareAcronym{FPKM}{long=Fragments Per Kilobase of exon per Million reads}
+\DeclareAcronym{CSH1}{short=\textit{CSH1},long=chorionic somatomammotropin hormone 1}
+\DeclareAcronym{CSH2}{short=\textit{CSH2},long=chorionic somatomammotropin hormone 2}
+\DeclareAcronym{CSHL1}{short=\textit{CSHL1},long=chorionic somatomammotropin hormone-like 1}
+\DeclareAcronym{GH2}{short=\textit{GH2},long=growth hormone 2}
+\DeclareAcronym{CEA}{long=carcinoembryonic antigen}
+\DeclareAcronym{HSD3B1}{short=\textit{HSD3B1},long=3-β Hydroxysteroid dehydrogenase 1}
+\DeclareAcronym{GSE}{long=Gene Set Enrichment}
+\DeclareAcronym{OU}{long=Ornstein-Uhlenbeck}
+\DeclareAcronym{OUCH}{long=\ac{OU} Comparative Hypotheses}
+\DeclareAcronym{TSI}{long=Tissue Specificity Index}
+\DeclareAcronym{SRA}{long=Sequence Read Archive}
+\DeclareAcronym{GH}{long=Growth Hormone}
+\DeclareAcronym{PSG}{long=Pregnancy-Specific Glycoprotein}
+\DeclareAcronym{PAG}{long=Pregnancy-Associated Glycoprotein}
+\DeclareAcronym{GO}{long=Gene Ontology}
+\DeclareAcronym{FDR}{long=False Discovery Rate}
 
 %%% Local Variables:
 %%% mode: latex
